--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -16,14 +16,18 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup JDK 21
+      - name: Setup JDK 17
         uses: actions/setup-java@v4.5.0
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Run clean with Maven
         run: mvn clean package
+
+      # Step to run unit tests using Maven
+      - name: Run Unit Tests
+        run: mvn test
 
       - name: Build Docker image
         run: docker build -t product-pipe-image .
