--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,13 @@ jobs:
         run: mvn test
 
       - name: Build Docker image
-        run: docker build -t product-pipe-image .
+        run: docker build -t product_pipe_image .
 
       - name: Log in to Docker
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME }}
+          password: ${{secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker Image
         run: |
