--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,58 @@
-name: Java ci with Maven
+name: Java CI with maven
 
-#Trigger
+#this sections defines when the workflow should run
 on:
   push:
     branches:
-      - master
+      - master #run this  workflow on pushes to the main branch
   pull_request:
     branches:
-      - master
+      - master #run this workflow on pull requests  targeting the main branch
+
 
 jobs:
   build:
+    # The type of machine that the job will run on
     runs-on: ubuntu-latest
+
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      # Steps to check out the repository code to the workflow runner
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Setup JDK 17
-        uses: actions/setup-java@v4.5.0
+
+      # Steps to set up JDK 17 to run the Java build
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '17' #the version of java to be installed
           distribution: 'temurin'
+          # Usually adopt ,temurin, corretto (Amazon) or openjdk (OpenJdk)
 
-      - name: Run clean with Maven
-        run: mvn clean package
+      # Steps to build the project using Maven
+      - name: Build with Maven
+        run: mvn clean install
 
-      # Step to run unit tests using Maven
-      - name: Run Unit Tests
+      # Steps to run unit tests using Maven
+      - name: Run unit test
         run: mvn test
 
-      - name: Build Docker image
+
+      # Part 2
+      # Steps to build a docker image
+      - name: Build docker image
         run: docker build -t product_pipe_image .
 
-      - name: Log in to Docker
+      # Steps to log into the Docker Hub
+      - name: Log in to docker hub
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_USERNAME }}
-          password: ${{secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step to push Docker image to Docker hub
       - name: Push Docker Image
         run: |
-          docker tag product-pipe-image ${{secrets.DOCKER_USERNAME}}/product_pipe_image:latest \
-          && docker push ${{secrets.DOCKER_USERNAME}}/product_pipe_image:latest
+          docker tag product_pipe_image ${{ secrets.DOCKER_USERNAME }}/product_pipe_image:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/product_pipe_image:latest
